@@ -1,3 +1,9 @@
+1998-09-11  Laurent Pautet  <pautet@scapin.enst.fr>
+
+	* s-garhea.adb: Workaround to avoid bad returned value assignment
+ 	on Solaris (probably GNAT bug). We need this to detect GLADE bugs
+ 	caused by the recent massive checkins.
+
 1998-09-09  Laurent Pautet  <pautet@scapin.enst.fr>
 
 	* s-garhea.adb: Change boot protocol to avoid multiple
